--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,19 @@ version: "3.9"
 
 services:
   backend:
+    container_name: backend
     build: .
     command: uvicorn src.api:app --host 0.0.0.0 --port 8000
     ports:
       - "8000:8000"
+    healthcheck:
+     test: ["CMD", "curl", "-f", "http://localhost:8000/docs"]
+     interval: 10s
+     timeout: 5s
+     retries: 5
 
   frontend:
+    container_name: frontend
     build: .
     command: streamlit run app/streamlit_app.py --server.port 8501 --server.headless true
     ports:
