--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -7,8 +7,8 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY src/ /app/src
-COPY model.pkl src/model.pkl
+COPY src/api.py /app/src/api.py
+COPY src/model.pkl /app/src/model.pkl
 
 EXPOSE 8000
 
