--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -7,7 +7,7 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY app/ /app/app
+COPY app/streamlit_app.py /app/streamlit_app.py
 
 EXPOSE 10000
 
